<resources>
    <string name="app_name">TrojanNow</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_messages">Messages</string>
    <string name="action_logout">Logout</string>
    <string name="action_user_mgmt">Friends Management</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="title_activity_voting">VotingActivity</string>
    <string name="title_activity_user_management">UserManagementActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_create_status">CreateStatusActivity</string>
    <string name="new_comment">New Comment</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="messages">Messages</string>
    <string name="refresh">Refresh</string>
    <string name="server_host">http://10.0.2.2:8000</string>
    <string-array name="sensor_arrays">
        <item>GPS</item>
        <item>Accelerometer</item>
    </string-array>
    <string name="title_activity_create_message">CreateMessageActivity</string>
    <string name="to">To:</string>
    <string name="text">Text</string>
    <string name="new_status">New Status</string>
    <string name="upload">Upload</string>
    <string name="environment">Environment</string>
    <string name="create_status">Create Status</string>
    <string name="refresh_status">Refresh Status</string>
    <string name="login_user_name">User name:</string>
    <string name="login_password">Password:</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="source">Source</string>
    <string name="done">Done</string>
    <string name="post">Post</string>
    <string name="environment_attributes">Environment Attributes</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="sensor_data">Sensor Data: </string>
    <string name="current_friends">Current Friends:</string>
    <string name="add_friend">Add Friend</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="clear">Clear</string>
</resources>
